--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -135,7 +135,7 @@ From {{inh|ja|ojp|sort=ほし|-}}, from {{inh|ja|jpx-pro|sort=ほし|*pəsi}}. F
 #* {{quote-book|date=May 2 2014|||publisher={{w|Wizards of the Coast}}|{{lj|ニクスへの旅}}|chapter={{lj|レオニンの[偶](ぐう)[像](ぞう)[破](は)[壊](かい)[者](しゃ)}}|trans-chapter=Leonin Iconoclast|||trans-title=Journey into Nyx|lang=ja}}
 #*: {{ja-usex|「'''星%々'''は夜%空にあるべきです。ここは我%々の世%界。そして我%々の事は我%々が決めます。」|「'''^ほし%ぼし''' は よ%ぞら に ある べき です。^ここ は われ%われ の せ%かい。^そして われ%われ の こと は われ%われ が きめます。」|“The stars belong in the night sky. This is our world. And we take matters into our own hands.”}}
 # {{lb|ja|sort=ほし|tarot}} the [[star|Star]]
-# {{lb|ja|loosely}} {{syn of|lang=ja|惑星|tr=wakusei||[[planet]]}}
+# {{lb|ja|loosely}} {{syn of|lang=ja|天体|tr=tentai||[[celestial body]]}}
 #* {{quote-book||
 |{{wj|美少女戦士セーラームーン|[美少女戦士](Pretty Guardian)[セーラームーン](SAILORMOON)}}
 ||181–183
@@ -154,9 +154,9 @@ From {{inh|ja|ojp|sort=ほし|-}}, from {{inh|ja|jpx-pro|sort=ほし|*pəsi}}. F
 |origdate=Jan 23 2004
 |volume=6
 |isbn=4-06-334835-0}}
-#*: {{ja-usex|——海の'''星'''海%王%星を守%護にもつ深%海の戦%士——セーラーネプチューン|——^うみ の '''^ほし''' ^かい%おう%せい を しゅ%ご に もつ しん%かい の せん%し ——^セーラー ^ネプチューン|——Warrior of the depths, keeper of Neptune the Sea Planet ——Sailor Neptune}}{{ja-usex|そして——風の'''星'''天%王%星を守%護にもつ天%空の戦%士　セーラーウラヌス　参%上！|^そして ——^かぜ の '''^ほし''' ^てん%のう%せい を しゅ%ご に もつ てん%くう の せん%し　^セーラー ^ウラヌス　さん%じょう！|And I am ——the warrior of the ether, keeper of Uranus the Wind Planet. Sailor Uranus enters the scene!}}
+#*: {{ja-usex|——海の'''星'''海%王%星を守%護にもつ深%海の戦%士——セーラーネプチューン|——^うみ の '''^ほし''' ^かい%おう%せい を しゅ%ご に もつ しん%かい の せん%し ——^セーラー ^ネプチューン|——Warrior of the depths, keeper of Neptune the Sea Planet ——Sailor Neptune|lit=——Warrior of the deep seas who defends Neptune the Sea Star ——Sailor Neptune}}{{ja-usex|そして——風の'''星'''天%王%星を守%護にもつ天%空の戦%士　セーラーウラヌス　参%上！|^そして ——^かぜ の '''^ほし''' ^てん%のう%せい を しゅ%ご に もつ てん%くう の せん%し　^セーラー ^ウラヌス　さん%じょう！|And I am ——the warrior of the ether, keeper of Uranus the Wind Planet. Sailor Uranus enters the scene!|lit=And ——warrior of the heavens who defends Uranus the Wind Star. Sailor Uranus enters the scene!}}
 #* {{quote-book
-|lang=ja
+|ja
 |location=Tokyo
 |publisher=Shueisha
 |authorlink=Nobuhiro Watsuki
@@ -169,7 +169,22 @@ From {{inh|ja|ojp|sort=ほし|-}}, from {{inh|ja|jpx-pro|sort=ほし|*pəsi}}. F
 |volume=9
 |chapter={{lj|[武](ブ)[装](ソウ)[錬](レン)[金](キン)ファイナル}}
 |trans-chapter=Armed Alchemy: The Final Act}}
-#*: {{ja-usex|………その覚%悟　一%体どこから……？|………^その かく%ご　^いっ%たい どこ から……？|………Such resolve. Where did you get it from……?}}{{ja-usex|もちろん！あの'''惑%星'''から　あそこには守りたい人%達が大%勢いる　一%番…守りたい人がいる|^もちろん！^あの '''ほ%し''' から　^あそこ に は まもりたい ひと%たち が おお%ぜい いる　^いち%ばん… まもりたい ひと が いる|Of course! From that planet. Where there are many people I sworn to protect. But most of all… where there’s the one person I sworn to protect.}}
+#*: {{ja-usex|………その覚%悟　一%体どこから……？|………^その かく%ご　^いっ%たい どこ から……？|………Such resolve. Where did you get it from……?}}{{ja-usex|もちろん！あの'''惑%星'''から　あそこには守りたい人%達が大%勢いる　一%番…守りたい人がいる|^もちろん！^あの '''ほ%し''' から　^あそこ に は まもりたい ひと%たち が おお%ぜい いる　^いち%ばん… まもりたい ひと が いる|Of course! From that planet. Where there are many people I sworn to protect. But most of all… where there’s the one person I sworn to protect.|lit=Of course! From that star. A great many people whom I want to protect are there. Most of all… the person I want to protect is.}}
+#* {{quote-book
+|ja
+|location=Tokyo
+|publisher=Shueisha
+|authorlink=Nobuhiro Watsuki
+|first=Nobuhiro
+|last=Watsuki
+|||{{wj|武装錬金|[武](ブ)[装](ソウ)[錬](レン)[金](キン)}}
+|trans-title={{w|Buso Renkin|Armed Alchemy}}
+|date=Apr 9 2006
+|isbn=4-08-874019-X
+|volume=10
+|chapter={{lj|[武](ブ)[装](ソウ)[錬](レン)[金](キン)ピリオド}}
+|trans-chapter=Armed Alchemy: The End}}
+#*:{{ja-usex|こちらからも出%迎えに行かねばだが　今の状%態ではその槍でこの星の重%力を突き破るのも不%可%能　そこでこれを使う　大戦斧の武%装%錬%金フェイタルアトラクション！特%性は〝重%力操%作〟‼これでこの'''星'''の重%力の一%部を反%転させてお前を宇%宙へ打ち上げる|^こちら から も で%むかえ に いかねば だ が　いま の じょう%たい で は その やり で この ほし の じゅう%りょく を つきやぶる の も ふ%か%のう　^そこ で これ を つかう　^グレート ^アックス の ^ブ%ソウ% ^レン%キン ^フェイタル ^アトラクション！^とく%せい は〝^じゅう%りょく ^そう%さ〟‼ ^これ で この '''ほし''' の じゅう%りょく の いち%ぶ を はん%てん させて お-まえ を う%ちゅう へ うちあげる|You’ll have to get to them yourself. You won’t be able to escape the Moon’s gravity with this lance in your current condition, though. So we’ll use this. Great-Axe Armed Alchemy: Fatal Attraction! Special Ability: ''Gravity Control''‼ With this, I can counteract part of the Moon’s gravity, enough to launch you into space.|lit=You won’t be able to escape this star’s gravity with this lance in your current condition, though. So we’ll use this. Great-Axe Armed Alchemy: Fatal Attraction! Special Ability: ''Gravity Control''‼ With this, I can counteract part of the Moon’s gravity, enough to launch you into space.}}
 
 =====Derived terms=====
 {{der-top}}
