--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -46,19 +46,19 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 ====Derived terms====
 {{der3|en
 |{{vern|African saffron}} ({{taxlink|Lyperia crocea|species|ver=190129}})
-|{{vern|American saffron}} (''{{l|mul|Carthamus tinctorius}}'')
+|{{vern|American saffron}} (''{{ll|mul|Carthamus tinctorius}}'')
 |{{vern|bastard saffron}} ({{taxlink|Cassine peragua|species|noshow=1}})
-|{{vern|dyer's saffron}} (''{{l|mul|Carthamus tinctorius}}'')
-|{{vern|false saffron}} (''{{l|mul|Carthamus tinctorius}}'')
-|{{l|en|Indian saffron}} (''{{l|mul|Carthamus tinctorius}}'', {{taxlink|Curcuma zedoaria|species|ver=190129}})
-|{{l|en|meadow saffron}} (''{{l|mul|Colchicum autumnale}}'')
-|{{vern|Persian saffron}} (''{{l|mul|Crocus sativus}}'')
+|{{vern|dyer's saffron}} (''{{ll|mul|Carthamus tinctorius}}'')
+|{{vern|false saffron}} (''{{ll|mul|Carthamus tinctorius}}'')
+|{{l|en|Indian saffron}} (''{{ll|mul|Carthamus tinctorius}}'', {{taxlink|Curcuma zedoaria|species|ver=190129}})
+|{{l|en|meadow saffron}} (''{{ll|mul|Colchicum autumnale}}'')
+|{{vern|Persian saffron}} (''{{ll|mul|Crocus sativus}}'')
 |{{vern|saffron buckwheat}} ({{taxlink|Eriogonum crocatum|species|ver=190129}})
 |{{vern|saffron cod}} ({{taxlink|Eleginus gracilis|species|ver=190129}})
 |{{vern|saffron-cowled blackbird}} ({{taxlink|Xanthospar flavus|species|ver=190229}})
-|{{vern|saffrom crocus}} (''{{l|mul|Crocus sativus}}'')
+|{{vern|saffrom crocus}} (''{{ll|mul|Crocus sativus}}'')
 |{{vern|saffron finch}} ({{taxlink|Sicalis flaveola|species|noshow=1}})
-|{{vern|saffron-headed parrot}} (''{{l|mul|Pyrilia pyrilia}}'')
+|{{vern|saffron-headed parrot}} (''{{ll|mul|Pyrilia pyrilia}}'')
 |saffronize
 |saffronization
 |{{vern|saffron milkcap}} ({{taxlink|Lactarius deliciosus|species|ver=190129}})
@@ -74,8 +74,8 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 |saffrony
 |saffronlike
 |{{vern|saffron spike}} ({{taxlink|Aphelandra squarrosa|species|noshow=1}})
-|{{vern|sheep saffron}} (''{{l|mul|Rumex acetosella}}'')
-|{{vern|thistle saffron}} (''{{l|mul|Carthamus tinctorius}}'')}}
+|{{vern|sheep saffron}} (''{{ll|mul|Rumex acetosella}}'')
+|{{vern|thistle saffron}} (''{{ll|mul|Carthamus tinctorius}}'')}}
 
 ====Related terms====
 {{rel2|en|safranine|safflower}}
