--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -15,6 +15,7 @@
 
 ===Glyph origin===
 {{Han etym}}
+Origins related to {{zh-l|媿}}. In ''{{w|Shuowen}}'', understood as an {{Han compound|恥|鬼|ls=ic|t1=shame|abb1=y|t2=spirit}}. {{Han compound|忄|鬼|ls=psc|c1=s|c2=p|t1=heart}}.
 
 ===Pronunciation===
 {{zh-pron
