--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|ang|sūcan||to suck}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*sūkaną}}, {{m|gem-pro|*sūganą||to suck, suckle}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*seug-}}, {{m|ine-pro|*sug-}}, {{m|ine-pro|*suk-}}. Cognate with {{cog|sco|souke||to suck}}, obsolete {{cog|nl|zuiken||to suck}}. Akin also to {{cog|ang|sūgan||to suck}}, {{cog|fy|sûge}}, {{m|fy|sûge||to suck}}, {{cog|nl|zuigen||to suck}}, {{etyl|de|-}} {{m|goh|saugen||to suck}}, {{cog|sv|suga||to suck}}, {{cog|is|sjúga||to suck}}, {{cog|la|sugō||suck}}, {{cog|cy|sugno||suck}}. Related to {{l|en|soak}}.
+From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck}}, from {{inh|en|gem-pro|*sūkaną}}, {{m|gem-pro|*sūganą|t=to suck, suckle}}, from {{der|en|ine-pro|*sewg-}}, {{m|ine-pro|*sewk-|t=to suck}}. Cognate with {{cog|sco|souke||to suck}}, obsolete {{cog|nl|zuiken||to suck}}. Akin also to {{cog|ang|sūgan||to suck}}, {{cog|fy|sûge}}, {{m|fy|sûge||to suck}}, {{cog|nl|zuigen||to suck}}, {{etyl|de|-}} {{m|goh|saugen||to suck}}, {{cog|sv|suga||to suck}}, {{cog|is|sjúga||to suck}}, {{cog|la|sugō||suck}}, {{cog|cy|sugno||suck}}. Related to {{l|en|soak}}.
 
 ===Pronunciation===
 * {{a|US}}, {{a|UK}} {{enPR|sŭk}}, {{IPA|/sʌk/|lang=en}}
