--- a/en/偔/偔.11108.wikitext
+++ b/en/偔/偔.11108.wikitext
@@ -35,7 +35,7 @@
 ===Etymology 2===
 From {{zh-l|*我|I; me}}, with -''k'' (plural marker) and tone change ({{zh-ref|Gan, 1997}}). {{zh-ref|Zhang (1997)}} suggests that this is a contraction of {{lang|zh|我個}}.
 
-Compare {{zh-l|*𠊬|they}}, from {{zh-l|*佢|he; she; it}}.
+Compare {{zh-l|㑢|they}}, from {{zh-l|*佢|he; she; it}}.
 
 ====Pronunciation====
 {{zh-pron
