--- a/en/側/側.11140.wikitext
+++ b/en/側/側.11140.wikitext
@@ -90,7 +90,7 @@
 {{ja-noun|そば}}
 
 # [[vicinity]], [[near]], [[beside]]
-
+#: {{ja-usex|あなたの'''側'''にいる弁護士がいます。|あなた の '''そば''' に いる べんごし が います。|There is a lawyer '''beside''' you.}}
 =====Derived terms=====
 {{der-top}}
 * {{ja-r|側%泳|そば%えい}}
