--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -67,7 +67,7 @@ From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}
 * Dutch: {{t+|nl|olijf|m}}
 * Erzya: {{t|myv|оймарь}}
 * Esperanto: {{t+|eo|olivo}}
-* Estonian: {{t|et|õlip}}
+* Estonian: {{t|et|oliiv}}
 * Ewe: {{t-needed|ee}}
 * Faroese: {{t|fo|oljuber|n}}
 * Finnish: {{t+|fi|oliivi}}
