--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -4,8 +4,7 @@
 From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautiful}}, equivalent to {{suf|en|beauty|ful}}. Displaced earlier {{m|en|sheen}} (from {{cog|enm|schene||beautiful}}, from {{cog|ang|scīene||beautiful}}), {{cog|enm|wliti||beautiful}}, from {{cog|ang|wlitiġ||beautiful}}.
 
 ===Pronunciation===
-* {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|[ˈbjuːɾɪfəɫ]|lang=en}}
-* {{a|US}} {{IPA|/ˈbjut̬ɪfəɫ/|lang=en}}
+* {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|en|/ˈbjuːtɪfəl/}}
 * {{audio|en-us-beautiful.ogg|Audio (US)|lang=en}}
 * {{audio|En-uk-beautiful.ogg|Audio (UK)|lang=en}}
 * {{audio|LL-Q1860 (eng)-Nattes à chat-beautiful.wav|Audio|lang=en}}
