--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -183,7 +183,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Shor: {{t|cjs|табарға|tr=tabarğa}}
 * Sicilian: {{t+|scn|truvari}}
 * Sinhalese: {{t|si|සොයා ගන්නවා|sc=Sinh}}
-* Slovak: {{t+|sk|nájsť|pf}}
+* Slovak: {{t+|sk|nájsť|pf}}, {{t|sk|nachádzať|impf}}
 * Slovene: {{t+|sl|najti|pf}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|namakaś|pf}}
@@ -227,6 +227,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Persian: {{t+|fa|نمایاندن|tr=namâyândan}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
 * Russian: {{t+|ru|выи́скивать|impf}}
+* Slovak: {{t+|sk|nájsť}}, {{t|sk|nachádzať}}
 * Swedish: {{t+|sv|finna}}, {{t+|sv|hitta}}
 {{trans-bottom}}
 
@@ -246,6 +247,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Norwegian: {{t+|no|finne}}
 * Portuguese: {{t+|pt|achar}}
 * Russian: {{t+|ru|находи́ть|impf}}, {{t+|ru|найти́|pf}}
+* Slovak: {{t|sk|považovať}}
 * Spanish: {{t+|es|creer}}, {{t+|es|encontrar}}
 * Swedish: {{t+|sv|finna}}, {{t+|sv|konstatera}}
 {{trans-bottom}}
@@ -308,6 +310,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Portuguese: {{t+|pt|achado|m}}
 * Romanian: {{t+|ro|descoperire|f}}
 * Russian: {{t+|ru|нахо́дка|f}}
+* Slovak: {{t|sk|nález}}
 * Spanish: {{t+|es|hallazgo|m}}
 * Swedish: {{t+|sv|fynd|n}}
 {{trans-bottom}}
@@ -323,6 +326,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Portuguese: {{t+|pt|encontro|m}}
 * Romanian: {{t+|ro|găsire|f}}, {{t+|ro|găsit|n}}
 * Russian: {{t+|ru|иска́ние|impf}}, {{t+|ru|нахожде́ние|pf}}
+* Slovak: {{t|sk|hľadanie}}
 * Taos: {{t|twf|thǫ́ne}}
 * Thai: {{t+|th|หา}}
 {{trans-bottom}}
