--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -157,7 +157,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Lithuanian: {{t|lt|surasti}}
 * Low German: {{t+|nds|finnen}}
 * Macedonian: {{t|mk|наоѓа|sc=Cyrl}}, {{t|mk|пронаоѓа|sc=Cyrl}}
-* Maltese: {{t-needed|mt}}
+* Maltese: {{t|mt|sab}}
 * Mizo: {{t|lus|hmu}}, {{t|lus|hmuchhuak}}
 * Mongolian: {{t+|mn|олох|sc=Cyrl}}
 * Nepali: {{t-needed|ne}}
