--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -35,6 +35,9 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 # {{surname|lang=en|French|from=French|dot=,}} {{n-g|famously held by—}}
 ## {{w|Anatole France}}, a French poet, journalist, and novelist.
 
+====Derived terms====
+* {{l|en|Petty France}}
+
 ====Meronyms====
 * {{sense|country}} {{l|en|European Union}}, {{l|en|Europe}}
 
