--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -84,7 +84,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Albanian: {{t+|sq|mullë}}, {{t+|sq|zgrof}}, {{t+|sq|stomak}}
 * Amharic: {{t|am|ጨጓራ|m|sc=Ethi}}
 * Arabic: {{t+|ar|مَعِدَة|f}}, {{t+|ar|مِعْدَة|f}}
-*: Egyptian Arabic: {{t|arz|معدة|f|tr=meʿda|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|معدة|f|tr=meʕda|sc=Arab}}
 * Aragonese: {{t|an|estomago|m|}}
 * Aramaic:
 *: Hebrew: {{t|arc|אסטומכא|m|tr=’isṬōmkā’|sc=Hebr}}
