--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -13,9 +13,8 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * {{audio|en-us-i.e..ogg|Audio (US)|lang=en}}
 * It is sometimes verbally enunciated as ''[[that is]]''.
 
-===Abbreviation===
-{{rfc-header|Abbreviation}}
-{{head|en|abbreviation}}
+===Adverb===
+{{head|en|adverb}}
 
 # {{lb|en|[[initialism]]}} [[that is|That is]]; [[in other words]]; [[that is to say]].
 #: ''The three U.S. states on the west coast ('''i.e.''', [[Washington]], [[Oregon]], and [[California]]) have mild seasonal variations in temperature ('''i.e.''', warm winters and cool summers).''
