--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -25,7 +25,7 @@ Three other forms were found in the oracle bone script:
 * {{zh-l|*𤰾}} < {{Han compound|田|月}} – probably a corruption of the above forms.
 
 ===Etymology===
-Of either {{inh|zh|sit-pro|-}} origin, compare {{cog|bo|tr=mdangs|t=facial color, appearance, brightness}} ({{zh-ref|Bodman, 1980}}) or from {{der|zh|aav}}. For more see {{och-l|[[亮]]}}.
+Of either {{inh|zh|sit-pro|-}} origin, compare {{cog|bo|མདངས||facial color, appearance, brightness}} ({{zh-ref|Bodman, 1980}}) or from {{der|zh|aav}}. For more see {{och-l|[[亮]]}}.
 
 ===Pronunciation===
 {{zh-pron
