--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -102,6 +102,7 @@ From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from 
 * Finnish: {{t+|fi|hiipiä}}, {{t+|fi|hivuttautua}}
 * Maori: {{t|mi|whakameto}}, {{t|mi|whakamomoka}}, {{t|mi|whakamoke}}, {{t|mi|whakatōkihi}}, {{t|mi|whakakoko}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|esgueirar}}
 * Russian: {{t+|ru|кра́сться|impf}}, {{t+|ru|подкра́дываться|impf}}
 * Swedish: {{t+|sv|smyga}}
 {{trans-bottom}}
