--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautiful}}, equivalent to {{suf|en|beauty|ful}}. Displaced earlier {{m|en|sheen}} (from {{cog|enm|schene||beautiful}}, from {{cog|ang|scīene||beautiful}}), {{cog|enm|wliti||beautiful}}, from {{cog|ang|wlitiġ||beautiful}}.
+From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautiful}}, equivalent to {{suf|en|beauty|ful|pos=adj}}. Displaced earlier {{m|en|sheen}} (from {{cog|enm|schene||beautiful}}, from {{cog|ang|scīene||beautiful}}), {{cog|enm|wliti||beautiful}}, from {{cog|ang|wlitiġ||beautiful}}.
 
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|en|/ˈbjuːtɪfəl/}}
