--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -215,7 +215,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 *: Hakka: {{t|hak|牛油|tr=ngiù-yù|sc=Hani}}, {{t|hak|乳油|tr=nen-yù}}, {{t|hak|白塔|tr=pat-tá}}
 *: Mandarin: {{t+|cmn|黃油|sc=Hani}}, {{t+|cmn|黄油|tr=huángyóu|sc=Hani}}, {{t+|cmn|牛油|tr=niúyóu|sc=Hani}}, {{t|cmn|白脫|sc=Hani}}, {{t|cmn|白脱|tr=báituō|sc=Hani}}
 *: Min Nan: {{t+|nan|牛油|tr=gû-iû}}, {{t|nan|bá-tah}} {{qualifier|Taiwan}}
-*: Wu: {{t|wuu|白脫|sc=Hani}}, {{t|wuu|白脱|tr=5baq tha|sc=Hani}}, {{t-check|wuu|牛油|tr=nyeu yeu|sc=Hani}}, {{t-check|wuu|黃油|sc=Hani}}, {{t-check|wuu|黄油|tr=huaon yue|sc=Hani}}
+*: Wu: {{t|wuu|白脫|sc=Hani}}, {{t|wuu|白脱|tr=5baq tha|sc=Hani}}, {{t-check|wuu|牛油|tr=nyeu yeu|sc=Hani}}, {{t-check|wuu|黃油|sc=Hani}}, {{t-check|wuu|黄油|tr=huaon yue|sc=Hani}}, {{t|wuu|白脫}}, {{t|wuu|白脱|tr=baq tha}}
 * Classical Syriac: {{t|syc|ܚܐܘܬܐ|f|tr=ḥeˀwṯā|sc=Syrc}}
 * Coptic: {{t|cop|ϭⲉⲗⲓ}}
 * Cornish: {{t|kw|amanyn|m}}
