--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -258,7 +258,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Irish: {{t+|ga|im|m}}
 *: Old Irish: {{t|sga|imb|n}}
 * Italian: {{t+|it|burro|m}}
-* Japanese: {{t+|ja|バター|tr=batā}}, {{t|ja|牛酪|tr=ぎゅうらく, gyūraku|sc=Jpan}}, {{t+|ja|乳酪|tr=[[にゅうらく]], nyūraku}}
+* Japanese: {{t+|ja|バター|tr=batā}}, {{t|ja|牛酪|tr=ぎゅうらく, gyūraku|sc=Jpan}}, {{t+|ja|乳酪|tr=にゅうらく, nyūraku}}
 * Javanese: {{t|jv|mertéga}}
 * Kannada: {{t+|kn|ಬೆಣ್ಣೆ}}
 * Kazakh: {{t|kk|май}}, {{t|kk|сармай}}, {{t|kk|сары май}}
@@ -284,7 +284,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Maltese: {{t+|mt|butir}}
 * Manx: {{t|gv|eeym|m}}
 * Maori: {{t|mi|pata}}
-* Marathi: {{t|mr|माखणे|tr=mākhaṇe}}
+* Marathi: {{t|mr|माखणे}}
 * Mari:
 *: Western Mari: {{t|mrj|ӱ}}
 * Mirandese: {{t-needed|mwl}}
