--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -32,6 +32,8 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 =====Translations=====
 {{trans-top|cloth made of matted fibres of wool}}
 * Albanian: {{t+|sq|plis|m}}
+* Arabic:
+*: Egyptian Arabic: {{t|arz|لبد|m|tr=libd}}
 * Armenian: {{t+|hy|թաղիք}}
 * Asturian: {{t|ast|fieltru|m}}
 * Bashkir: {{t|ba|кейеҙ}}
