--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -169,6 +169,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Finnish: {{t+|fi|turkki}} {{qualifier|fur}}, {{t+|fi|höyhenpuku}} {{qualifier|feathers}}
 * Greek: {{t+|el|τρίχωμα|n|sc=Grek}}, {{t+|el|γούνα|f|sc=Grek}}, {{qualifier|feathers}} {{t+|el|φτέρωμα|n|sc=Grek}}
 * Hungarian: {{t+|hu|bunda}}
+* Irish: {{t|ga|clúmh|m}}
 * Japanese: {{t|ja|毛皮|tr=[[けがわ]], kegawa|sc=Jpan}}, {{t+|ja|羽毛|tr=[[うもう]], umō|sc=Jpan}}
 * Latin: {{t|la|pellis|f}}
 * Macedonian: {{t|mk|крзно|n|sc=Cyrl}} {{qualifier|fur}}, {{t|mk|пердуви|m|sc=Cyrl}} {{qualifier|feathers}}
