--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -17,9 +17,6 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 # An instance of drawing something into one's mouth by inhaling.
 #* '''2001''', D. Martin Doney, ''Prayer Capsule: A Book of Honesty'', page 261
 #*: Bammer agreed “Probably a good idea,” he agreed with a quick '''suck''' on his straw, “won't stop you from picking up any of these chicks, though.”
-# {{lb|en|vulgar}} [[fellatio|Fellatio]] of a penis.
-#* '''2012''', Alex Carreras, ''Cruising with Destiny'', page 12
-#*: Nate exhaled a long, slow breath. What the hell was he thinking? He couldn't cruise the steam room looking for married men looking for a quick '''suck'''. He needed to shoot his load, but was he really that desperate?
 # {{lb|en|Canada}} A [[weak]], [[self-pitying]] person; a person who won't [[go along]], especially out of [[spite]]; a [[crybaby]] or [[sore loser]].
 #* '''1999''', Hiromi Goto, “Drift”, in ''Ms.'', v 9, n 3, p 82–6:
 #*: “Why're you bothering to take her anywhere? I can't stand traveling with her. You're such a '''suck''',” her sister said. Waved her smoke. “No fucking way I'm going.”
@@ -28,6 +25,10 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 # A [[sycophant]], especially a [[child]].
 #* '''1916''', {{w|James Joyce}}, ''{{w|Portrait of the Artist as a Young Man}}'', Macmillan Press, p 23:
 #*: You are McGlade's '''suck'''.
+# {{lb|en|slang|dated}} A short [[drink]], especially a [[dram]] of [[spirits]].
+# {{lb|en|vulgar}} An act of [[fellatio]].
+#* '''2012''', Alex Carreras, ''Cruising with Destiny'', page 12
+#*: Nate exhaled a long, slow breath. What the hell was he thinking? He couldn't cruise the steam room looking for married men looking for a quick '''suck'''. He needed to shoot his load, but was he really that desperate?
 
 ====Synonyms====
 * {{sense|crybaby}} {{l|en|sook}}
