--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -64,6 +64,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 * Chinese:
 *: Mandarin: {{t+|cmn|天頂|sc=Hani}}, {{t+|cmn|天顶|tr=tiāndǐng|sc=Hani}}
 * Czech: {{t+|cs|nadhlavník|m}}, {{t+|cs|zenit|m}}
+* Danish: {{t+|da|zenit|n}}
 * Finnish: {{t+|fi|zeniitti}}
 * French: {{t+|fr|zénith|m}}
 * German: {{t+|de|Zenit|m}}
