--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -16,7 +16,7 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 ===Adverb===
 {{head|en|adverb}}
 
-# {{lb|en|[[initialism]]}} [[that is|That is]]; [[in other words]]; [[that is to say]].
+# {{lb|en|[[initialism]]}} [[that is|That is]], [[namely]], [[in other words]], [[that is to say]].
 #: ''The three U.S. states on the west coast ('''i.e.''', [[Washington]], [[Oregon]], and [[California]]) have mild seasonal variations in temperature ('''i.e.''', warm winters and cool summers).''
 
 ====Usage notes====
