--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -20,8 +20,8 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 #: ''The three U.S. states on the west coast ('''i.e.''', [[Washington]], [[Oregon]], and [[California]]) have mild seasonal variations in temperature ('''i.e.''', warm winters and cool summers).''
 
 ====Usage notes====
-* Often confused with ''[[e.g.]]'': ''i.e.'' is used to [[explain]], [[clarify]] or [[rephrase]] a statement; ''[[e.g.]]'' is used to list examples.<br /> ''i.e.'' differs from ''[[viz.]]'' in that what follows merely restates what was said in other words, rather than expanding upon what has already been said; and from ''e.g.'' in that completeness or near-completeness is suggested, rather than a small selection of examples.
-* American English prefers a comma after ''i.e.''; in British English a comma does not follow ''i.e.''
+* Often confused with ''[[e.g.]]'': In correct use, ''i.e.'' is used to [[explain]], [[clarify]] or [[rephrase]] a statement, whereas ''[[e.g.]]'' is used to list examples.<br /> The correct use of ''i.e.'' differs from that of ''[[viz.]]'' in that what follows ''i.e.'' merely restates in other words what has already been said, whereas what follows ''viz.'' expands upon what has already been said; and it differs from the correct use of ''e.g.'' in that completeness or near-completeness is suggested by ''i.e.'', whereas e.g. introduces a not complete and often only small selection of examples.
+* American English prefers a comma after ''i.e.'', but British English usually does not use a comma there and often does not use dots either.
 * Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in ''i.&nbsp;e.'', or whether this matters at all. However, the [[wikipedia:AMA Manual of Style|AMA manual of style]] recommends to forgo italic on terms long since naturalized into English and not to separate abbreviations (see [[wikipedia:Abbreviation|"Abbreviation" on Wikipedia]]).
 
 ====Synonyms====
