--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -22,7 +22,10 @@ From {{der|en|enm|costen}}, from {{der|en|fro|coster}}, {{m|fro|couster||to cost
 #*: Thus the red damask curtains which now shut out the fog-laden, drizzling atmosphere of the Marylebone Road, had '''cost''' a mere song, and yet they might have been warranted to last another thirty years. A great bargain also had been the excellent Axminster carpet which covered the floor;{{nb...}}.
 # To cause something to be lost; to cause the expenditure or relinquishment of.
 #: {{ux|en|Trying to rescue the man from the burning building '''cost''' them their lives.}}
-#* {{rfdate|en|and other bibliographic particulars}} {{w|William Shakespeare}}
+#* {{quote-journal|en
+|title=How our home delivery habit reshaped the world|author=Samanth Subramanian|date=November 21 2019|journal=The Guardian|url=https://www.theguardian.com/technology/2019/nov/21/how-our-home-delivery-habit-reshaped-the-world
+|passage=the packaging of home-delivered products now accounts for 30% of the solid rubbish the US generates annually, and the cardboard alone '''costs''' 1bn trees. }} 
+#* {{rfdatek|en|William Shakespeare}}
 #*: though it '''cost''' me ten nights' watchings
 # To require to be borne or suffered; to cause.
 #* {{rfdate|en|and other bibliographic particulars}} {{w|John Milton}}
