--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -54,6 +54,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 |branch line
 |branch office
 |branchlike
+|Long Branch
 |main branch
 |olive branch
 |West Branch
