--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -31,6 +31,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 # {{lb|en|poker slang}} A [[community card]] (usually the [[turn]] or the [[river]]) which does not improve a player's hand.
 #: {{ux|en|The two of clubs was a complete '''brick''' on the river}}
 # The colour [[brick red]].
+# {{lb|en|slang}} one kilo of [[cocaine]]. 
 
 ====Derived terms====
 {{der4|en|all-brick
