--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -110,6 +110,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 *: Nynorsk: {{t|nn|gardin|f|n}}
 * Novial: {{t-needed|nov}}
 * Occitan: {{t+|oc|cortina|f}}
+* Old English: {{t|ang|wāgrift|n}}
 * Pashto: {{t+|ps|پرده|tr=parda}}, {{t+|ps|پېڅول|tr=paissawal }}
 * Persian: {{t+|fa|پرده|tr=parde}}
 * Polish: {{t+|pl|zasłona|f}}, {{t+|pl|kurtyna|f}}, {{t+|pl|firana|f}}, {{t+|pl|firanka|f}}
