--- a/en/惼/惼.15632.wikitext
+++ b/en/惼/惼.15632.wikitext
@@ -4,15 +4,13 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=93027|canj=PHSB|ids=⿰忄扁}}
 
-# [[narrow-minded]]
-
 ====References====
 {{Han ref|kx=0393.080|dkj=10872|dj=0729.060|hdz=42331.110|uh=60FC}}
 
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=褊}}
 
 ===Glyph origin===
 {{Han etym}}
@@ -29,7 +27,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{lb|zh|literary}} [[narrow-minded]]
 
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
