--- a/en/坹/坹.13052.wikitext
+++ b/en/坹/坹.13052.wikitext
@@ -9,12 +9,24 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[jyut6]]|y=yut6}}
+===Glyph origin===
+{{Han etym}}
 
-# {{rfdef|yue|sort=土05}}
+===Pronunciation===
+{{zh-pron
+|m=xuè
+|c=jyut6
+|mc=y
+|oc=y
+|cat=}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
@@ -29,13 +41,4 @@
 # {{rfdef|ja|sort=土05}}
 
 ====Readings====
-* {{ja-readings|on=[[けつ]] (ketsu), [[げち]] (gechi)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xuè]] ([[xue4]])|wg=hsüeh<sup>4</sup>}}
-
-# {{rfdef|cmn|sort=土05}}
+{{ja-readings|on=[[けつ]] (ketsu), [[げち]] (gechi)|kun=}}
