--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -96,7 +96,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Albanian: {{t+|sq|gjej}}
 * Arabic: {{t+|ar|وَجَدَ}}, {{t|ar|لَقِيَ}}
 *: Egyptian Arabic: {{t|arz|لقى|tr=laʾa}}
-*: Moroccan Arabic: {{t|ary|لقى|tr=lqa}}, {{t|ary|صاب|tr=ṣab}}, {{t|ary|جبر|tr=jber}}
+*: Moroccan Arabic: {{t|ary|لقى|tr=lqa}}, {{t|ary|صاب|tr=ṣāb}}, {{t|ary|جبر|tr=jbar}}
 * Armenian: {{t+|hy|գտնել}}
 * Asturian: {{t|ast|alcontrar}}, {{t|ast|encontrar}}
 * Avar: {{t-needed|av}}
