--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -153,6 +153,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Walloon: {{t+|wa|rivômi}}, {{t|wa|vômi}}, {{t+|wa|rinåder}} {{qualifier|unpolite}}
 * Welsh: {{t+|cy|chwydu}}
 * Yiddish: {{t|yi|ברעכן}}, {{t|yi|אויסברעכן}}, {{t|yi|צוריקגעבן}}
+* Yámana: {{t|yag|tamaia}}
 * Zazaki: {{t|zza|vırecen}}
 * Zealandic: {{t|zea|spieë}}, {{t|zea|spoege}}, {{t|zea|kotse}} {{q|vulgar}}
 {{trans-bottom}}
