--- a/en/p/Pythonesque.2111.wikitext
+++ b/en/p/Pythonesque.2111.wikitext
@@ -19,11 +19,11 @@ From the name of the British comedy troupe [[Monty Python]], referring to their 
 # {{lb|en|computing|informal}} Typical of, or suited to, the [[Python]] [[programming language]].
 #* '''2001''', Andy Duncan, Sean Hull, ''Oracle and Open Source: Tools and Applications''
 #*: The module works by wrapping the C-extended <code>Tkinter</code> module into '''Pythonesque''' classes.
-#* '''2003''', Richard Hightower, ''Python Programming with the Java Class Libraries''
-#*: If you want to cut out a third line, you can rewrite the above with a lambda function, which turns four lines into one (how very '''Pythonesque''').
+#* {{quote-book|en|year=2003|author=Richard Hightower|title=Python Programming with the Java Class Libraries|passage=If you want to cut out a third line, you can rewrite the above with a lambda function, which turns four lines into one (how very '''Pythonesque''').}}
 
 ====Further reading====
 * {{pedialite|Monty Python}}
 * {{pedialite|Python (programming language)}}
+
 [[Category:English eponyms]]
 [[Category:English words suffixed with -esque]]
