--- a/en/昺/昺.16995.wikitext
+++ b/en/昺/昺.16995.wikitext
@@ -4,9 +4,6 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=60227|canj=AMOB|ids=⿱日丙}}
 
-# [[bright]], [[glorious]]
-# [[brilliant]]
-
 ====Derived characters====
 * {{l|mul|[[𡹾]], [[𨕈]], [[𠨈]]}}
 
@@ -25,7 +22,7 @@
 {{zh-pron
 |m=bǐng
 |c=bing2
-|mc=
+|mc=y
 |oc=y
 |ma=
 |cat=a
@@ -34,7 +31,10 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{lb|zh|literary}} {{zh-alt-form|炳|[[bright]]; [[brilliant]]}}
+
+====Usage notes====
+Mostly used in personal names.
 
 ----
 
