--- a/en/偋/偋.11099.wikitext
+++ b/en/偋/偋.11099.wikitext
@@ -36,7 +36,7 @@
 {{zh-hanzi}}
 
 # {{†}} a [[secluded]] place
-# {{†}} {{zh-alt-form|摒|to [[discard]]}}
+# {{†}} {{zh-alt-form|摒|to [[abandon]]; to [[discard]]}}
 
 ----
 
