--- a/en/垛/垛.13087.wikitext
+++ b/en/垛/垛.13087.wikitext
@@ -40,16 +40,18 @@
 ===Pronunciation 2===
 {{zh-pron
 |m=duǒ
-|cat=
+|cat=n,v,cl
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# to [[pile]]; to [[stack]]
+# [[pile]]; [[stack]]
+# {{zh-classifier|[[pile]]s or [[stack]]s}}
 
 ====Compounds====
-{{zh-der|垛子|城垛口|牆垛子|}}
+{{zh-der|垛子|城垛口|牆垛子}}
 
 ===References===
 * {{R:yue:Hanzi}}
