--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -208,6 +208,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Dalmatian: {{t|dlm|taljur}}
 * Danish: {{t+|da|skære}}, {{t|da|snitte}}
 * Dutch: {{t+|nl|snijden}}
+* Egyptian: {{t-egy|nšm|h=n:S-m-T30}}
 * Esperanto: {{t|eo|tranĉi}}
 * Finnish: {{t+|fi|leikata}}
 * French: {{t+|fr|couper}}, {{t+|fr|inciser}}
@@ -302,7 +303,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Galician: {{t+|gl|cortar}}, {{t+|gl|tallar}}
 * German: {{t+|de|schneiden}}
 * Greek: {{t+|el|κόβω}}
-*: Ancient Greek: {{t|grc|κόπτω}}
+*: Ancient: {{t|grc|κόπτω}}
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
 * Hungarian: {{t+|hu|elvág}}
 * Icelandic: {{qualifier|with a knife}} {{t+|is|skera}}, {{qualifier|with scissors}} {{t|is|klippa}}
